{
    "name": "SpaceExplorerInputs",
    "maps": [
        {
            "name": "CameraScaler",
            "id": "f05406fb-1ac4-4e54-939a-32e3c4758e64",
            "actions": [
                {
                    "name": "TouchOne",
                    "type": "Button",
                    "id": "82a722f3-e985-48b1-b97d-9d69b93d3100",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchTwo",
                    "type": "Button",
                    "id": "9f265cf9-c5ff-4d0b-baa7-009a0f37d58d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchOnePosition",
                    "type": "Value",
                    "id": "1c5de4f5-8b25-42e8-a68c-09e24864fc80",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchTwoPosition",
                    "type": "Value",
                    "id": "5affaae8-6e4f-4c02-b7e3-b62b38798aad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31ee849f-4731-4ccc-ad81-41322474d5c6",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0360059-36cf-48ad-9019-ed7b025c2227",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b3c868f-be12-4884-8538-400f4e084734",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchOnePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77536ba8-1037-4187-9e6e-843f2735c962",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTwoPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "0f658738-63c5-4f23-a80c-8437f1760078",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "a5831cbb-cd57-49ee-88bb-edfb0ccda48f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "3e60e638-4d76-473b-9476-4a229c83bd1b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1be87e53-1067-4622-8d45-c262986fc62d",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d14d5f62-929d-48f5-aaea-59770715021e",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}